added angular view for instant search

--- a/app/views/customers/_pager.html.erb
+++ b/app/views/customers/_pager.html.erb
@@ -1,15 +1,10 @@
 <nav>
   <ul class="pager">
-    <li class="previous <%= page == 0 ? 'disabled' : '' %>">
-     <% unless page == 0 %>
-      <%= link_to_if page > 0,
-          "&larr; Previous".html_safe,
-           customers_path(keywords: keywords, page: page - 1) %>
-     <% end %>
+    <li class="previous">
+      <a href="" ng-click="nextPage()">&larr; Previous</a>
     </li>
-    <li class="next">
-      <%= link_to "Next &rarr;".html_safe,
-      customers_path(keywords: keywords, page: page + 1) %>
+    <li class ="next">
+      <a href="" ng-click="nextPage()">Next &rarr;</a>
     </li>
   </ul>
 </nav>
